Remove virtual threads option